# overwatch-ai

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
backend/: .env.example  pyproject.toml  railway.toml
backend/app/: config.py  database.py  main.py  migrations.py
backend/app/agents/: orchestrator.py
backend/app/models/: briefing.py  chat.py  commitment.py  event.py  push.py  reflection.py  stale_check.py  stats.py  user.py
backend/app/prompts/: chat.py  commitment_parser.py  evening_reflection.py  morning_briefing.py  reminder_phrase_backfill.py  stale_check_reply.py
backend/app/providers/: calendar_provider.py  empty_calendar_provider.py  google_calendar_provider.py  mock_calendar_provider.py
backend/app/repositories/: briefing_repository.py  commitment_repository.py  conversation_repository.py  google_calendar_tokens_repository.py  push_subscription_repository.py  reflection_repository.py  user_repository.py
backend/app/routes/: auth.py  briefings.py  calendar.py  chat.py  commitments.py  push.py  reflections.py  stats.py
backend/app/services/: briefing_service.py  calendar_service.py  chat_service.py  commitment_parser_service.py  commitment_service.py  google_calendar_oauth.py  google_oauth_service.py  jwt_service.py  push_service.py  reflection_service.py  reminder_phrase_backfill_service.py  reminder_scheduler.py  stale_check_scheduler.py  stats_service.py  timezone_utils.py  vapid_keys.py
backend/migrations/: 001_initial.sql  002_users_and_sessions.sql  003_google_calendar_tokens.sql  003_multi_tenancy.sql  004_google_tokens.sql  004_user_scoping.sql  005_conversation_turns.sql  006_recurrence.sql  007_reminder_lead_minutes.sql  008_group_name.sql  009_stale_check.sql  010_reflections.sql  011_reminder_phrase.sql
backend/scripts/: backfill_reminder_phrases.py  setup_google_oauth.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_briefing_routes.py  test_calendar_routes.py  test_commitment_routes.py  test_push_routes.py  test_reflection_routes.py  (+1 more)
(+119 files in other folders)
