[project]
name = "overwatch-backend"
version = "0.1.0"
description = "Backend for Overwatch — a conversational AI productivity assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn>=0.46",
    "pydantic>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
