[project]
name = "overwatch-backend"
version = "0.1.0"
description = "Backend for Overwatch — a conversational AI productivity assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn>=0.46",
    "pydantic>=2.13",
    "pydantic-settings>=2.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
