[project]
name = "overwatch-backend"
version = "0.1.0"
description = "Backend for Overwatch — a conversational AI productivity assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn>=0.46",
    "pydantic>=2.13",
    "pydantic[email]>=2.13",
    "pydantic-settings>=2.0",
    "requests>=2.32",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "pywebpush>=2.0",
    "pyjwt>=2.9",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
